--- a/imdb_clone/src/index.css
+++ b/imdb_clone/src/index.css
@@ -1,4 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Kaushan+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@layer base {
+  * {
+    font-family: 'Kaushan Script', cursive;
+  }
+}
